--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,17 @@ dependencies:
   rxdart: ^0.22.2
   shared_preferences: ^0.4.2
   flutter_bloc: ^0.21.0
+  flutter_launcher_icons: ^0.8.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/comfortable.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,6 +63,7 @@ flutter:
     - images/programmer.png
     - images/arrow.png
     - images/superhero.png
+    - images/comfortable.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
